# PGVectorScale-RAG-Solution

./: .gitignore  .pdm-python  pyproject.toml  similarity_search.py  vectorize.py
src/config/: settings.py
src/database/: vector_store.py
src/services/: llm_factory.py  syntheizer.py
